Need to fix these Z-Indexes so popup and popup-filter is above menus. Fix to webSite/theme/default/js/areaedit.bounds.js

--- a/core/theme/default/css/libIndexAndSite/popup.less
+++ b/core/theme/default/css/libIndexAndSite/popup.less
@@ -7,7 +7,7 @@
 	height: 100%;
 	background-color: #ccc;
 	background-color: rgba(200,200,200,0.7);
-	z-index: 500;
+	z-index: 100000;
 }
 
 
@@ -24,7 +24,7 @@
 	margin: 0 auto;
 	left: 0;
 	right: 0;
-	z-index: 1000;
+	z-index: 100001;
 	.popupBoxClose {
 		padding: 3px;
 		a {
